# archive-explorer

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: archive_api.rs  db.rs  lib.rs  main.rs  models.rs  quality_filter.rs
src-tauri/src/commands/: collections.rs  discovery.rs  items.rs  links.rs  mod.rs  search.rs  sessions.rs  settings.rs  tags.rs
src/components/discovery/: DiscoveryTab.tsx  FilterBar.tsx  GridView.tsx  SpotlightView.tsx
src/components/search/: SearchTab.tsx
src/components/settings/: CollectionManager.tsx  ThemePicker.tsx
src/components/shared/: JournalPanel.tsx  MediaPreview.tsx  MetadataPanel.tsx  TagInput.tsx  Toast.tsx
src/hooks/: useDiscovery.ts  useLibrary.ts  useTheme.ts
src/lib/: tauri-commands.ts  types.ts
src/themes/: index.css
