[package]
name = "archive-roulette"
version = "0.1.0"
description = "Desktop app for discovering Internet Archive content"
authors = ["Lance Eaton"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "archive_roulette_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
csv = "1.3"
thiserror = "1"
urlencoding = "2"
once_cell = "1"
